se agregó area de Contacto con validación de datos

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html> 
 <head>
 	<meta charset="UTF-8">
 	<title>Coder Girls Floating</title>
@@ -9,7 +9,7 @@
 <body>
 	<section class="navegador">
 		<div id="codeGirls"><p>Code Girls</p></div>
-		<ul>	
+		<ul>	 
 			<li><a href="#" class="navi">Inicio</a></li>
 			<li><a href="#" class="navi">Documental</a></li>
 			<li><a href="#" class="navi">Hackathon</a></li>
@@ -19,7 +19,7 @@
 	<section class="bienvenida">
 		<h1>Chicas QUe Cambian el Mundo</h1>
 		<p>Participa en nuestras actividades</p>
-		<button>Inscríbete</button>
+		<button id="buttonBienvenida">Inscríbete</button>
 	</section>
 	<section class="hackaton">
 		<img id="love" src="assets/img/hackathon.jpg">
@@ -29,6 +29,20 @@
 			Pempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat.</p>
 		</div>
+		<button id="buttonHackethon">Hackathon</button>
 	</section>
+	<section class="contacto">
+		<img id="made" src="assets/img/made_with_code.jpg">
+		<form class="formContacto">
+			<h1>Contacto</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor. </p>
+			<input type="text" name="inputNombre" id="inputNombre" placeholder="Nombre">
+			<input type="text" name="inputEmail" id="inputEmail" placeholder="Email">
+			<input type="text" name="inputAsunto" id="inputAsunto" placeholder="Asunto">
+			<input type="text" name="inputMensaje" id="inputMensaje" placeholder="Mensaje">
+			<button id="buttonForm">Enviar</button>
+		</form>
+	</section>
+	<script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 </html>
