funcionalidad de boton Inscribirse

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</ul>
 	</section>
 	<section class="bienvenida">
-		<h1>Chicas QUe Cambian el Mundo</h1>
+		<h1 id="tituloId">Chicas QUe Cambian el Mundo</h1>
 		<p>Participa en nuestras actividades</p>
 		<button id="buttonBienvenida">Inscríbete</button>
 	</section>
